history-patch-error.txt
file:///home/runner/work/zentausend-app/zentausend-app/scripts/apply-history-validation.mjs:7
    throw new Error(`${label}: expected ${sequentialStatsReplacement ? 'at least 1' : '1''} match, found ${count}`)
                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

SyntaxError: Missing } in template expression
    at compileSourceTextModule (node:internal/modules/esm/utils:346:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:146:18)
    at #translate (node:internal/modules/esm/loader:497:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:544:27)
    at async ModuleJob._link (node:internal/modules/esm/module_job:148:19)

Node.js v20.20.2
